# learn-unrealengine-section4

./: .gitignore
BattleTank/: BattleTank.uproject  BattleTank.workspace  BattleTankCodeCompletionFolders.txt  BattleTankCodeLitePreProcessor.txt  CMakeLists.txt
BattleTank/Config/: DefaultEditorPerProjectUserSettings.ini  DefaultEditorUserSettings.ini  DefaultEngine.ini  DefaultGame.ini
BattleTank/Content/: BattleGround.umap  BattleTankGameMode_BP.uasset  Landscape.uasset
BattleTank/Content/BattleGround_sharedassets/: Dirt_LayerInfo.uasset  Grass_LayerInfo.uasset  Landscape.uasset  Rock_LayerInfo.uasset  Snow_LayerInfo.uasset  Water_LayerInfo.uasset
BattleTank/Content/Blueprints/: BattleTankGameMode_BP.uasset
BattleTank/Content/Tank/: TankPlayerController_BP.uasset  Tank_BP.uasset  tank_fbx_Barrel.uasset  tank_fbx_Body.uasset  tank_fbx_Track.uasset  tank_fbx_Turret.uasset
BattleTank/Content/UI/: MainMenuUI.uasset  MainMenu_BP.uasset  PlayerUI.uasset  PlayerUI_BP.uasset  inktank.uasset  inktank_Font.uasset
BattleTank/Content/_Levels/: MainMenu.umap
BattleTank/Debug/BattleTank.tlog/: BattleTank.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
BattleTank/Source/BattleTank/Private/: Tank.cpp  TankAIController.cpp  TankAimingComponent.cpp  TankPlayerController.cpp
BattleTank/Source/BattleTank/Public/: Tank.h  TankAIController.h  TankAimingComponent.h  TankPlayerController.h
